--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h1 {
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
+  /* text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); */
 }
 
 .header-text {
@@ -110,6 +111,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -147,6 +152,11 @@ img {
 }
 
 /* CHAIRS */
+/* box-shadow: horizontal offset, vertical offset, blur, (radius) scale the shadow up, color; */
+.chair {
+  box-shadow: 0 20px 30px 0 rgb(0, 0, 0, 0.1);
+}
+
 .chair-box {
   padding: 24px;
 }
@@ -173,6 +183,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
